refactor: 💡 [api] refactor api and tests
