# api/docs/swagger.json
@@ -52,7 +52,7 @@
                 }
             }
         },
-        "/cart-products/{userId}": {
+        "/cart-products/{user_id}": {
             "get": {
                 "tags": [
                     "Cart"
@@ -62,7 +62,7 @@
                     {
                         "type": "string",
                         "description": "User ID",
-                        "name": "userId",
+                        "name": "user_id",
                         "in": "path",
                         "required": true
                     }
